# invoice-collection-service

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  index.js  package-lock.json  package.json
backend/src/: api.js  app.js  config.js  db.js  logger.js  main.rs
backend/src/controllers/: invoice.controller.js
backend/src/middlewares/: async.middleware.js  cors.middleware.js  error.middleware.js
backend/src/models/: config.rs  error.rs  invoice.model.js  invoice.rs  mod.rs
backend/src/routes/: health.rs  invoice.route.js  invoice.rs  mod.rs
database/init_scripts/: init.sql
frontend/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/camera/: camera.jsx  camera.module.scss
frontend/src/components/results/: results.jsx  results.module.scss
frontend/src/pages/camera-page/: camera-page.jsx  index.js
frontend/src/pages/main-page/: MainPage.jsx  main-page.module.scss
frontend/src/pages/photo-result-page/: index.js  photo-result-page.jsx  photo-result-page.module.scss
frontend/src/pages/qr-result-page/: index.js  qr-result-page.jsx
frontend/src/pages/scan-qr-page/: index.js  scan-qr-page.jsx
frontend/src/routes/: routes.jsx
frontend/src/services/: api.js
frontend/src/store/: store.js
frontend/src/store/reducers/: data.slice.js
frontend/src/styles/: _variables.scss  index.scss
(+8 files in other folders)
