[package]
name = "invoice-collection-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-easy-multipart = "3.0.0"
actix-files = "0.6.2"
tempfile = "3.4.0"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.7"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
